Makes camelCased over underscored as default for attribute names at Data Model and API definition
